worked on formatting

--- a/index.html
+++ b/index.html
@@ -1,63 +1,27 @@
+<!DOCTYPE html>
 <html>
-
 <title>search engine title here</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<head>
-<style>
-.dropbtn {
-	background-color: black;
-	color: white;
-	padding: 16px;
-	font-size: 16px;
-	border:solid green 6px;
-	cursor: pointer;
-	float: left;
-}
-
-.dropdown {
-	position: relative;
-
-	display: inline-block;
-
-}
-.dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: black;
-	min-width: 160px;
-	z-index: 1;
-}
-.dropdown-content a {
-	color: green;
-	padding: 10px 10px;
-	text-decoration: none;
-	display: block;
-}
-.dropdown-content a:hover {background-color: white;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: grey;}
-</style>
-</head>
+<head></head>
 <body>
 
 
 
-  <!--<div id="container"></div>-->
 
- <!--<div id="header"></div>-->
+<div id="header"></div>
+<div id="sidebar"> 
 <div class="dropdown">
-	<button class="dropbtn">Menu</button>
-	<div class="dropdown-content">
-	<a href="https://www.hackthissite.org">~/HackThisSite!</a>
-	<a href=#>~/Linux!</a>
-	<a href=#>~/Python!</a>
-	</div>
+<button class="dropbtn">Menu</button>
+<div class="dropdown-content">
+<a href="https://www.hackthissite.org">~/HackThisSite!</a>
+<a href=#>~/Linux!</a>
+<a href=#>~/Python!</a>
 </div>
-<!-- <div id="sidebar"></div> -->
+</div>
+</div>
+
 <div id="content"><p><strong>theclicommander@theterminal:~/#</strong> Welcome to The Terminal! I'm the SysAdmin, you can call me TheCliCommander. Explore the filesystem and learn something new!</p></div>
-<!-- <div id="footer">Footer Goes Here</div> -->
+<div id="footer"></div> 
 
 </body>
 </html>
