--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html>
-<title>search engine title here</title>
+<head>
+<title>The Terminal</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<head></head>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<div class="header">
+<div class="dropdown">
+<button class="dropbtn">user@theterminal:~/$</button>
+<div class="dropdown-content">
+<a href="https://www.hackthissite.org">  ~/HackThisSite!</a>
+<a href=#>  ~/Linux!</a>
+<a href=#>  ~/Python!</a>
+</div>
+</div>
+</div>
+
+
+
+<!-- <div class="sidebar">The Terminal</div> -->
+
+
 <body>
 
 
 
-
-<div id="header"></div>
-<div id="sidebar"> 
-<div class="dropdown">
-<button class="dropbtn">Menu</button>
-<div class="dropdown-content">
-<a href="https://www.hackthissite.org">~/HackThisSite!</a>
-<a href=#>~/Linux!</a>
-<a href=#>~/Python!</a>
-</div>
-</div>
-</div>
-
-<div id="content"><p><strong>theclicommander@theterminal:~/#</strong> Welcome to The Terminal! I'm the SysAdmin, you can call me TheCliCommander. Explore the filesystem and learn something new!</p></div>
-<div id="footer"></div> 
+<div class="content"><p><strong>..........the terminal.........</p></strong><image src="commodore.png" style="width:cover;height:cover"></div>
+<!-- <div id="footer">The Terminal</div> 
+ -->
 
 </body>
 </html>
