added linux page, edited menu

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <div class="header">
 <div class="dropdown">
-<button class="dropbtn">user@theterminal:~/$</button>
+<button class="dropbtn">user@theterminal:~/$ cd</button>
 <div class="dropdown-content">
-<a href="https://www.hackthissite.org">  ~/HackThisSite!</a>
-<a href=#>  ~/Linux!</a>
-<a href=#>  ~/Python!</a>
+<!-- <a href="https://www.hackthissite.org">~/HackThisSite</a> -->
+<a href="Linux.html">~/Linux</a>
+<a href=#>~/Python</a>
 </div>
 </div>
 </div>
@@ -31,6 +31,6 @@
 <div class="content"><p><strong>..........the terminal.........</p></strong><image src="commodore.png" style="width:cover;height:cover"></div>
 <!-- <div id="footer">The Terminal</div> 
  -->
-
+<p>knowledge is power!</p>
 </body>
 </html>
