added subnav dropdown

--- a/Linux.html
+++ b/Linux.html
@@ -16,4 +16,18 @@
 </div>
 </div>
 <body>
-<div class="content"><p><strong>..........the terminal.........</p></strong><image src="commodoreLinux.png" style="width:cover;height:cover"></div>
+<div class="content"><p><strong>..........the terminal.........</strong></p>
+<div class="dropdown1">
+<button class="dropbtn1">user@subnav:~/Linux$ cd</button>
+<div class="dropdown-content1">
+<a href="commandline.html">~/Linux/Commandline</a>
+<a href="NetworkManager.html">~/Linux/NtwrkManager</a>
+<a href="SSH.html">~/Linux/SSH</a>
+<a href="NFS.html">~/Linux/NFS</a>
+</div>
+</div>
+</div>
+
+
+</div></p></strong><image src="commodoreLinux.png" style="width:cover;height:cover"></div>
+</body>
