edited images on commandline, added more commands, started Networking page

--- a/Linux.html
+++ b/Linux.html
@@ -21,7 +21,7 @@
 <button class="dropbtn1">user@subnav:~/Linux$ cd</button>
 <div class="dropdown-content1">
 <a href="commandline.html">~/Linux/Commandline</a>
-<a href="NetworkManager.html">~/Linux/NtwrkManager</a>
+<a href="Networking.html">~/Linux/Networking</a>
 <a href="SSH.html">~/Linux/SSH</a>
 <a href="NFS.html">~/Linux/NFS</a>
 </div>
